--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body >
+    <body ng-controller="MainController as vm">
         <script src="/bundle.js"></script>
-    <webpack></webpack>
-    
+        <h1></h1>
+            <router-view-port></router-view-port>
     </body>
 </html>
